--- a/src/Component/Container/style.module.css
+++ b/src/Component/Container/style.module.css
@@ -1,10 +1,14 @@
 .Container {
-  max-width: 1440px;
+  width: 1200px || 100vw;
+  height: auto;
   margin-left: auto;
   margin-right: auto;
-  padding-left: 15px;
-  padding-right: 15px;
+  padding-left: 10px;
+  padding-right: 10px;
+  padding-bottom: 5px;
+  text-align: center;
 }
+
 ul {
   list-style: none;
   padding-inline-start: 0;
